demo/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels :
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mariamnegm/mysql-image:latest
        ports:
         - containerPort: 3306


---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
