demo/spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
  labels:
    name: spring
spec:
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring-boot
          image: mariamnegm/docker-phase3-spring:latest
          ports:
            - containerPort: 8080







---
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
